fixed overflow x

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -390,12 +390,9 @@ section:not(.hero) {
 /* Iphone 5 ~~~~ */
 
 @media only screen and (max-width: 24em) {
-    .jumbotron__logo {
-        width: 160px;
-    }
-
     .hero {
         font-size: 16px;
+        overflow: hidden;
     }
 
     .jumbotron .header.jumbotron__header-text {
